--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ The main goal of this course is to expose students to modern ideas in statistica
 || 4 || 3/4/2020 || U7-17 || 11:30-16:30 (3h) || FWER control: Bonferroni ||
 ||  || ||  ||  || ||
 || 5 || 6/4/2020 || U7-17 || 13:30-16:30 (3h) || FDR control: Benjamini-Hochberg ||
-|| 6 || 7/4/2020 || U7-17 || 9:30-11:30 (2h) ||  Uniform Bounds for the FDP  ||
+|| 6 || 9/4/2020 || U7-17 || 9:30-11:30 (2h) ||  Uniform Bounds for the FDP  ||
 || 7 || 17/4/2020 || U7-17 || 13:30-15:30 (3h) || High-Dimensional Inference  ||
 ||  || ||  ||  || ||
 || 8 || 20/4/2020 || U7-17 || 13:30-15:30 (2h) || Modern Methods for Variable Selection ||
@@ -77,9 +77,9 @@ inference)
     - Benjamini-Yekutieli procedure
     - False coverage control
     
-* Uniform Bounds for the False Discovery Proportion 
+* [Uniform Bounds for the False Discovery Proportion](docs/slides/7_posthoc.pdf)
     - Post-hoc inference
-    - Closed testing with Simes local tests
+<!-- - Closed testing with Simes local tests -->
 
 * High-Dimensional Inference
     - Sample-splitting
@@ -97,8 +97,8 @@ inference)
 || 1 || 27/03/2020 || 06/04/2020 || [HW1](docs/hw/hw1.pdf) ||
 || 2 || 30/03/2020 || 10/04/2020 || [HW2](docs/hw/hw2.pdf) ||
 || 3 || 03/04/2020 || 14/04/2020 || [HW3](docs/hw/hw3.pdf) ||
-|| 4 || 07/04/2020 || 21/04/2020 || [HW4]() ||
-|| 5 || 17/04/2020 || 21/04/2020 || [HW5]() ||
+|| 4 || 09/04/2020 || 21/04/2020 || [HW4](docs/hw/hw4.pdf) ||
+|| 5 || 17/04/2020 || 24/04/2020 || [HW5]() ||
 
 The rules are the following:
 
