--- a/index.Rmd
+++ b/index.Rmd
@@ -98,7 +98,7 @@ inference)
 || 2 || 30/03/2020 || 10/04/2020 || [HW2](docs/hw/hw2.pdf) ||
 || 3 || 03/04/2020 || 14/04/2020 || [HW3](docs/hw/hw3.pdf) ||
 || 4 || 09/04/2020 || 21/04/2020 || [HW4](docs/hw/hw4.pdf) ||
-|| 5 || 17/04/2020 || 24/04/2020 || [HW5]() ||
+|| 5 || 17/04/2020 || 24/04/2020 || [HW5](docs/hw/hw5.pdf) ||
 
 The rules are the following:
 
