--- a/index.Rmd
+++ b/index.Rmd
@@ -44,31 +44,33 @@ Se non specificato, la lezione è sincrona.
   
 L’esame è composto da due parti:
 
-1. Prova scritta (50%).
+1. Prova scritta (50%) che si svolgerà in corrispondenza degli appelli d'esame;
 
-2. Analisi dei dati (50%).
+2. Analisi dei dati (50%) da consegnare almeno una settimana prima della prova scritta. 
   
 Il voto finale è dato dalla media dei voti delle parti 1. e 2. Lo studente (oppure il docente) può richiedere la prova orale.
 
 ### Analisi dei dati
 
-L'analisi dai dati prevede la consegna sulla pagina MOODLE di un file TXT per ciascuno dei seguenti 4 data set. 
+L'analisi dai dati prevede la consegna sulla pagina MOODLE (almeno una settimana prima della prova scritta) di un file TXT per ciascuno dei seguenti 4 data set: 
 
 * Intervalli di previsione: l'obiettivo è costruire intervalli di previsione per il test set di ciascun data set. Gli intervalli verranno valutati in termini di copertura e lunghezza complessiva.
 
-   * Data set PRED_LOW a bassa dimensionalità
-   * Data set PRED_HIGH ad alta dimensionalità 
+   * Data set PRED_LOW_train e PRED_LOW_test a bassa dimensionalità
+   * Data set PRED_HIGH_train e PRED_HIGH_test ad alta dimensionalità 
  
 * Selezione delle variabili: l'obiettivo è selezionare l'insieme di variabili "rilevanti" per ciascun data set. La selezione verrà valutata in termini di True Positive Rate e False Discovery Rate. 
 
    * Data set VS_LOW a bassa dimensionalità
    * Data set VS_HIGH ad alta dimensionalità 
 
-Oltre ai file TXT, bisognerà consegnare sulla pagina MOODLE i corrispettivi file PDF contenenti il codice utilizzato (riportare solo il codice strettamente necessario che deve essere riproducibile). 
+Oltre ai file TXT, bisogna consegnare sulla pagina MOODLE i corrispettivi file PDF contenenti il codice utilizzato (riportare solo il codice strettamente necessario che deve essere riproducibile). 
 
-Agli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno consegnare le analisi entro l'ultima lezione del corso (12 Aprile) e preparare una breve presentazione del loro lavoro.
+* L'analisi dei dati può essere consegnata una volta sola;
 
-Il punteggio ottenuto sarà valido fino a fine Febbraio 2022. 
+* Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021);
+
+* Il punteggio ottenuto sarà valido fino a fine Febbraio 2022. 
 
 ### Prova scritta
 
@@ -78,7 +80,7 @@ La prova scritta
 
 * sarà in modalità "libro aperto", quindi sarà possibile consultare appunti, libri, codice etc. durante la prova;
 
-* riguarda tutti gli argomenti affrontati nel corso e può prevedere l'utilizzo di un computer su cui è installato il software R o RStudio; 
+* ha come obiettivo la verifica della comprensione degli aspetti matematico-statistici e di programmazione degli argomenti trattati e può prevedere l'utilizzo di un computer su cui è installato il software R o RStudio; 
 
 * consiste in domande sia a risposta multipla o aperta sia a risposta singola in forma numerica. 
 
