--- a/index.Rmd
+++ b/index.Rmd
@@ -56,19 +56,20 @@ L'analisi dai dati prevede la consegna sulla pagina MOODLE (almeno una settimana
 
 * Intervalli di previsione: l'obiettivo è costruire intervalli di previsione per il test set di ciascun data set. Gli intervalli verranno valutati in termini di copertura e lunghezza complessiva.
 
-   * Data set PRED_LOW_train e PRED_LOW_test a bassa dimensionalità
-   * Data set PRED_HIGH_train e PRED_HIGH_test ad alta dimensionalità 
+   * Data set [PRED_LOW_train](docs/data/PRED_LOW_train.txt) e [PRED_LOW_test](docs/data/PRED_LOW_test.txt) a bassa dimensionalità
+   * Data set [PRED_HIGH_train]() e [PRED_HIGH_test]() ad elevata dimensionalità 
+   * Esempio di consegna: [TXT](docs/data/2575_PRED_LOW.txt), [RMD](docs/data/2575_PRED_LOW.Rmd) e [PDF](docs/data/2575_PRED_LOW.pdf). E' obbligatorio rispettare il formato richiesto. 
  
 * Selezione delle variabili: l'obiettivo è selezionare l'insieme di variabili "rilevanti" per ciascun data set. La selezione verrà valutata in termini di True Positive Rate e False Discovery Rate. 
 
-   * Data set VS_LOW a bassa dimensionalità
-   * Data set VS_HIGH ad alta dimensionalità 
+   * Data set [VS_LOW](docs/data/VS_LOW.txt) a bassa dimensionalità
+   * Data set [VS_HIGH](docs/data/VS_HIGH.txt) ad elevata dimensionalità 
 
 Oltre ai file TXT, bisogna consegnare sulla pagina MOODLE i corrispettivi file PDF contenenti il codice utilizzato (riportare solo il codice strettamente necessario che deve essere riproducibile). 
 
 * L'analisi dei dati può essere consegnata una volta sola;
 
-* Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021);
+* Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno consegnare almeno una settimana prima del primo appello (entro 20 Aprile 2021 ore 14:30) e preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021);
 
 * Il punteggio ottenuto sarà valido fino a fine Febbraio 2022. 
 
