--- a/index.Rmd
+++ b/index.Rmd
@@ -64,14 +64,15 @@ L'analisi dai dati prevede la consegna sulla pagina MOODLE (almeno una settimana
 
    * Data set [VS_LOW](docs/data/VS_LOW.txt) a bassa dimensionalità
    * Data set [VS_HIGH](docs/data/VS_HIGH.txt) ad elevata dimensionalità 
-
+   * Esempio di consegna: [TXT](docs/data/2575_VS_HIGH.txt), [RMD](docs/data/2575_VS_HIGH.Rmd) e [PDF](docs/data/2575_VS_HIGH.pdf). E' obbligatorio rispettare il formato richiesto. 
+   
 Oltre ai file TXT, bisogna consegnare sulla pagina MOODLE i corrispettivi file PDF contenenti il codice utilizzato (riportare solo il codice strettamente necessario che deve essere riproducibile). 
 
 * L'analisi dei dati può essere consegnata una volta sola;
 
 * Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno consegnare almeno una settimana prima del primo appello (entro 20 Aprile 2021 ore 14:30) e preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021);
 
-* Il punteggio ottenuto sarà valido fino a fine Febbraio 2022. 
+* Il punteggio ottenuto per l'analisi dei dati sarà valido fino a fine Febbraio 2022. 
 
 ### Prova scritta
 
