--- a/index.Rmd
+++ b/index.Rmd
@@ -70,7 +70,7 @@ Oltre ai file TXT, bisogna consegnare sulla pagina MOODLE i corrispettivi file P
 
 * L'analisi dei dati può essere consegnata una volta sola;
 
-* Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno consegnare almeno una settimana prima del primo appello (entro 20 Aprile 2021 ore 14:30) e preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021). Tuttavia, non è richiesto di affrontare la prova scritta necessaraiamente al primo appello;
+* Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno consegnare almeno una settimana prima del primo appello (entro 20 Aprile 2021 ore 14:30) e preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021). Tuttavia, non è richiesto di affrontare la prova scritta necessariamente al primo appello;
 
 * Il punteggio ottenuto per l'analisi dei dati sarà valido fino a fine Febbraio 2022. 
 
