--- a/index.Rmd
+++ b/index.Rmd
@@ -13,13 +13,17 @@ Corso di Laurea Magistrale in Scienze Statistiche ed Economiche, Università deg
 
 ## Calendario delle lezioni e materiale didattico
 
+CONFORMAL INFERENCE
+
 * L01 (Giovedì 18 Marzo 10:30-13:30) 3h
-   * Prediction intervals in the linear model
+   * Prediction intervals
    * Conformal prediction
 
 * L02 (Lunedì 22 Marzo 12:30-15:30) 3h
    * Split conformal prediction
    * Multi split conformal prediction
+
+HIGH DIMENSIONAL STATISTICS AND MULTIPLE TESTING
 
 * L03 (Martedì 23 Marzo 9:30-11:30) 2h
    * The crisis of modern science
@@ -27,14 +31,16 @@ Corso di Laurea Magistrale in Scienze Statistiche ed Economiche, Università deg
    
 * L04 (Giovedì 25 Marzo 10:30-13:30) 3h
    * What can go wrong in high dimensions?
-   * Global testing in high-dimensions
+   * Global testing in high dimensions
    
 * L05 (Lunedì 29 Marzo 12:30-15:30) 3h
    * Multiple testing: FWER controlling procedures
    * Multiple testing: FDR controlling procedures
 
+VARIABLE SELECTION
+
 * L06 (Martedì 30 Marzo 9:30-11:30) 2h 
-   * Data-splitting for high-dimensional inference
+   * Data splitting for high dimensional variable selection
    
 * L07 (Giovedì 8 Aprile 10:30-13:30) 3h 
    * Stability selection
