--- a/index.Rmd
+++ b/index.Rmd
@@ -83,19 +83,15 @@ Se non specificato, la lezione è sincrona.
 
 ## Esame
   
-L’esame è composto da due parti:
-
-1. Prova scritta (peso 1/3) che si svolgerà in corrispondenza degli appelli d'esame;
-
-2. Analisi dei dati (peso 2/3) da consegnare almeno una settimana prima della prova scritta. 
+L’esame consiste nello svolgimento dell'Analisi dei dati da consegnare almeno tre giorni prima della data dell'appello. 
   
-Il voto finale è dato dalla media pesata dei voti delle parti 1. e 2. Lo studente (oppure il docente) può richiedere la prova orale.
+Lo studente (oppure il docente) può richiedere la prova orale.
 
 ### Analisi dei dati
 
-L'analisi dai dati prevede la consegna sulla pagina MOODLE (almeno una settimana prima della prova scritta) di un file TXT per ciascuno dei seguenti 4 data set: 
+L'analisi dai dati prevede la consegna sulla pagina MOODLE (almeno tre giorni prima della data dell'appello) di un file TXT per ciascuno dei seguenti 4 data set: 
 
-* Intervalli di previsione: l'obiettivo è costruire intervalli di previsione per il test set di ciascun data set. Gli intervalli verranno valutati in termini di copertura e lunghezza complessiva.
+* Intervalli di previsione: l'obiettivo è costruire intervalli di previsione per il test set di ciascun data set. Gli intervalli verranno valutati in termini di copertura (target: 90\%) e lunghezza complessiva.
 
    * Data set [PRED_LOW_train](docs/data/PRED_LOW_train.txt) e [PRED_LOW_test](docs/data/PRED_LOW_test.txt) a bassa dimensionalità
    * Data set [PRED_HIGH_train]() e [PRED_HIGH_test]() ad elevata dimensionalità 
@@ -111,21 +107,8 @@ Oltre ai file TXT, bisogna consegnare sulla pagina MOODLE i corrispettivi file P
 
 * L'analisi dei dati può essere consegnata una volta sola;
 
-* Gli studenti che si iscrivono al seguente form entro il 18 Marzo 2021 viene data la possibilità di svolgere l'analisi dei dati in gruppi di (al massimo) tre persone (suddivisi casualemente). Gli studenti che partecipano in gruppo dovranno consegnare almeno una settimana prima del primo appello (entro 20 Aprile 2021 ore 14:30) e preparare una breve presentazione del loro lavoro che si svolgerà in corrispondenza del primo appello (27 Aprile 2021). Tuttavia, non è richiesto di affrontare la prova scritta necessariamente al primo appello;
-
 * Il punteggio ottenuto per l'analisi dei dati sarà valido fino a fine Febbraio 2022. 
 
-### Prova scritta
-
-La prova scritta
-
-* si svolgerà in remoto con il sistema di proctoring;
-
-* sarà in modalità "libro aperto", quindi sarà possibile consultare appunti, libri, codice etc. durante la prova;
-
-* ha come obiettivo la verifica della comprensione degli aspetti matematico-statistici e di programmazione degli argomenti trattati e può prevedere l'utilizzo di un computer su cui è installato il software R o RStudio; 
-
-* consiste in domande sia a risposta multipla o aperta sia a risposta singola in forma numerica. 
 
 ### Calendario degli esami
 
